restructured the book to make more sense

--- a/book/print.html
+++ b/book/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="design/design.html"><strong aria-hidden="true">3.</strong> Why Disolv?</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="design/mobility.html"><strong aria-hidden="true">3.1.</strong> Mobility</a></li><li class="chapter-item expanded "><a href="design/links.html"><strong aria-hidden="true">3.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="design/streams.html"><strong aria-hidden="true">3.3.</strong> Streams</a></li><li class="chapter-item expanded "><a href="design/messages.html"><strong aria-hidden="true">3.4.</strong> Messages</a></li><li class="chapter-item expanded "><a href="design/discrete.html"><strong aria-hidden="true">3.5.</strong> Discrete-time</a></li></ol></li><li class="chapter-item expanded "><a href="decisions/decisions.html"><strong aria-hidden="true">4.</strong> Software decisions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="decisions/software.html"><strong aria-hidden="true">4.1.</strong> Software</a></li><li class="chapter-item expanded "><a href="decisions/architecture.html"><strong aria-hidden="true">4.2.</strong> Architecture</a></li></ol></li><li class="chapter-item expanded "><a href="crates/crates.html"><strong aria-hidden="true">5.</strong> Crates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="core/core.html"><strong aria-hidden="true">5.1.</strong> Core</a></li><li class="chapter-item expanded "><a href="devices/devices.html"><strong aria-hidden="true">5.2.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="devices/vehicles.html"><strong aria-hidden="true">5.2.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="devices/rsu.html"><strong aria-hidden="true">5.2.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="devices/controller.html"><strong aria-hidden="true">5.2.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="models/models.html"><strong aria-hidden="true">5.3.</strong> Models</a></li><li class="chapter-item expanded "><a href="network/network.html"><strong aria-hidden="true">5.4.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="network/resources.html"><strong aria-hidden="true">5.4.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="network/slice.html"><strong aria-hidden="true">5.4.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="network/bs.html"><strong aria-hidden="true">5.4.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="input/input.html"><strong aria-hidden="true">5.5.</strong> Input</a></li><li class="chapter-item expanded "><a href="output/output.html"><strong aria-hidden="true">5.6.</strong> Output</a></li></ol></li><li class="chapter-item expanded "><a href="workflow/workflow.html"><strong aria-hidden="true">6.</strong> Workflow</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="design/design.html"><strong aria-hidden="true">3.</strong> Why Disolv?</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="design/mobility.html"><strong aria-hidden="true">3.1.</strong> Mobility</a></li><li class="chapter-item expanded "><a href="design/links.html"><strong aria-hidden="true">3.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="design/streams.html"><strong aria-hidden="true">3.3.</strong> Streams</a></li><li class="chapter-item expanded "><a href="design/messages.html"><strong aria-hidden="true">3.4.</strong> Messages</a></li><li class="chapter-item expanded "><a href="design/discrete.html"><strong aria-hidden="true">3.5.</strong> Discrete-time</a></li></ol></li><li class="chapter-item expanded "><a href="decisions/decisions.html"><strong aria-hidden="true">4.</strong> Software decisions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="decisions/software.html"><strong aria-hidden="true">4.1.</strong> Software</a></li><li class="chapter-item expanded "><a href="decisions/architecture.html"><strong aria-hidden="true">4.2.</strong> Architecture</a></li></ol></li><li class="chapter-item expanded "><a href="crates/crates.html"><strong aria-hidden="true">5.</strong> Library Crates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/core/core.html"><strong aria-hidden="true">5.1.</strong> Core</a></li><li class="chapter-item expanded "><a href="crates/devices/devices.html"><strong aria-hidden="true">5.2.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/devices/vehicles.html"><strong aria-hidden="true">5.2.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="crates/devices/rsu.html"><strong aria-hidden="true">5.2.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="crates/devices/controller.html"><strong aria-hidden="true">5.2.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="crates/models/models.html"><strong aria-hidden="true">5.3.</strong> Models</a></li><li class="chapter-item expanded "><a href="crates/network/network.html"><strong aria-hidden="true">5.4.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/network/resources.html"><strong aria-hidden="true">5.4.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="crates/network/slice.html"><strong aria-hidden="true">5.4.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="crates/network/bs.html"><strong aria-hidden="true">5.4.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="crates/input/input.html"><strong aria-hidden="true">5.5.</strong> Input</a></li><li class="chapter-item expanded "><a href="crates/output/output.html"><strong aria-hidden="true">5.6.</strong> Output</a></li></ol></li><li class="chapter-item expanded "><a href="execs/execs.html"><strong aria-hidden="true">6.</strong> Executables</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="execs/v2x.html"><strong aria-hidden="true">6.1.</strong> V2X</a></li><li class="chapter-item expanded "><a href="execs/links.html"><strong aria-hidden="true">6.2.</strong> Links</a></li></ol></li><li class="chapter-item expanded "><a href="workflow/workflow.html"><strong aria-hidden="true">7.</strong> Workflow</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -180,6 +180,37 @@ Disolv is implemented in Rust to enable large scale simulation studies of connec
 This documentation contains the description and the design of the simulator.</p>
 <p>Source code is available <a href="https://github.com/nagacharan-tangirala/disolv">here</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
+<h2 id="prerequisites"><a class="header" href="#prerequisites">Prerequisites</a></h2>
+<p>If you are on a new installation of Ubuntu, install the necessary build tools using the command:</p>
+<pre><code>sudo apt-get install build-essential
+</code></pre>
+<p>For Macbook, you need homebrew and Xcode. Get the XCode from the App store. Install Homebrew with the command:</p>
+<pre><code>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+</code></pre>
+<p>Check the latest command from the <a href="https://brew.sh/">official Homebrew site</a> if the above command fails.</p>
+<h2 id="rust-toolchain"><a class="header" href="#rust-toolchain">Rust toolchain</a></h2>
+<p>Rust toolchain is essential for the simulator to work. At the time of writing this, you can use the following command to install the necessary toolchain:</p>
+<pre><code>curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+</code></pre>
+<p>Check the <a href="https://www.rust-lang.org/tools/install">official link</a> if the above command fails.</p>
+<h2 id="disolv-1"><a class="header" href="#disolv-1">Disolv</a></h2>
+<ol>
+<li>Download the latest <strong>main</strong> branch using the command:</li>
+</ol>
+<pre><code>git clone https://github.com/nagacharan-tangirala/disolv.git
+</code></pre>
+<ol start="2">
+<li>Navigate to the folder and build all possible executables of the simulator using the command:</li>
+</ol>
+<pre><code>cargo build --release
+</code></pre>
+<ol start="3">
+<li>To build a specific package/executable, use the command:</li>
+</ol>
+<pre><code>cargo build --package &lt;package_name&gt; --release
+</code></pre>
+<h2 id="executables"><a class="header" href="#executables">Executables</a></h2>
+<p>Disolv is a single repo with multiple executables. Depending on the application, you can select the packages for compilation. More about the executables is described in the <a href="installation/../execs/execs.html">Executables section</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="basics"><a class="header" href="#basics">Basics</a></h1>
 <p>In this section, some preliminary basic ideas are discussed -</p>
 <ul>
@@ -278,6 +309,9 @@ Several design aspects are incorporated to achieve this and we will look at them
 <li><a href="design/./design/messages.html">Messages</a></li>
 <li><a href="design/./design/discrete.html">Discrete-time</a></li>
 </ul>
+<blockquote>
+<p><em>The details about the choices and their impact on the simulation is compared in the <a href="https://doi.org/10.1145/3615979.3656062">Disolv introductory article</a> published at PADS Conference, 2024.</em></p>
+</blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="mobility"><a class="header" href="#mobility">Mobility</a></h1>
 <p>One of the components of a VANET simulator is the mobility component.
 Mobility modeling is a complex task in itself and has a dedicated community behind it.
@@ -310,6 +344,15 @@ This has an advantage of feeding a real-world mobility data as an input to the s
   <img style="max-width: 45%; height: auto;" src="design/../resources/images/design/mobility-pre.png">
 </p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="links"><a class="header" href="#links">Links</a></h1>
+<p>The next important component after Mobility is the connectivity.
+To simulate the communication between agents, each agent must know who is in their vicinity.
+This is an <strong>O(N<sup>2</sup>)</strong> operation because every agent should know about every other agent's position and determine if it is in the vicinity.
+Because of the motion of the agents, this calculation is essential at each time step.
+A significant time of the simulation is spent in this operation when the scale of the simulation is extremely large.</p>
+<p>Disolv addresses the issue by allowing an input of neighbour information.
+Similar to vehicular positions, the data for each agent and its neighbours can be fed as an input to the simulation.
+For the convenience of the users, Disolv comes with an executable that enables preparation of this file.
+This is a one-time step performed for each simulation and is required whenever there is a change in the positions file.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="streams"><a class="header" href="#streams">Streams</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="messages"><a class="header" href="#messages">Messages</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="discrete-time"><a class="header" href="#discrete-time">Discrete-time</a></h1>
@@ -409,6 +452,9 @@ The location of the Base Station is important, in particular, for the newer prot
 The services offered to the devices in the vicinity depends on the Base Station.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="input"><a class="header" href="#input">Input</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="output"><a class="header" href="#output">Output</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="executables-1"><a class="header" href="#executables-1">Executables</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="v2x"><a class="header" href="#v2x">V2X</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="links-2"><a class="header" href="#links-2">Links</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="workflow"><a class="header" href="#workflow">Workflow</a></h1>
 
                     </main>
